yaml/oidc-plugin-dep.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: openfaas
    component: oidc-plugin
  name: oidc-plugin
  namespace: "openfaas"
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "false"
      labels:
        app: oidc-plugin
    spec:
      containers:
      - name:  oidc-plugin
        resources:
          requests:
            memory: "20Mi"
            cpu: "20m"
        image: alexellis/oidc-plugin-dist:0.1.0
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: false
          runAsUser: 10001
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
