yaml/oidc-plugin-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openfaas
    component: oidc-plugin
  name: oidc-plugin
  namespace: "openfaas"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: oidc-plugin
